# survguard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: left_truncation.md
examples/left_truncation/: README.md  bad_analysis.py  context.txt  corrected_analysis.py  generate_data.py
survguard/: __init__.py  audit.py  cli.py  schemas.py
survguard/ai/: __init__.py
survguard/datasets/: __init__.py  left_truncation.py
survguard/parsers/: __init__.py  lifelines_parser.py
survguard/reports/: __init__.py  markdown.py
survguard/rules/: __init__.py  left_truncation.py
tests/: test_audit.py  test_left_truncation_rule.py
